--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ email: onicjapan@e-side.co.jp
 description: >
   本サイトはOpen NetworkIng Conference Japanのホームページです。
 baseurl: "/archives/2019/"
+#baseurl: ""
 url: "https://onic.jp"
 permalink: pretty
 favicon: /img/favicon.ico
