--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -1,258 +1,269 @@
-- date: October 29, 2022
+- date: -DAY1- October 15, 2020
   sessions:
-    - title: 受付開始
-      time: 10:00-
-    - title: 開会宣言
-      time: 10:20-10:30
-      presenters:
-        - name_and_title: |-
-            ONIC実行委員会委員長
-    - title: フューチャープルーニング：ネットワークの進化とAIの役割
-      time: 10:30-11:00
-      type: 講演
+    - title: 「データ中心アーキテクチャへ　– What’s next for Edge Computing? 」
+      time: "13:00"
+      type: 講演 D1_1
       tag: s_01
       presenters:
         - name_and_title: |-
-            デジタルウェイ・テクノロジーズ<br />
-            デジタルイノベーション部<br />
-            田中　麻衣子
-          photo: placeholder-120x140.png
+            Cisco Systems, Distinguished Systems Engineer<br />
+            河野 美也
+          photo: kohnosan.jpg
       abstract: |-
-        このセッションでは、未来のネットワークトレンドと、人工知
-        能（AI）がネットワーク管理、セキュリティ、および最適化に
-        果たす役割に焦点を当てます。AIによる自己適応型ネットワー
-        クの展望について議論し、ネットワークインフラストラクチャ
-        の新たな展開に関する洞察を提供します。
-        [https://google.com](https://google.com)
+        昨年のONICで「データ中心アプローチ」についてお話しさせて戴きました。
+        コネクション中心かつポリシーや認証がアクセス手段に密接に結び付けられている方式には、
+        限界が見えています。データも、できるだけユーザの近くに遍在することが求められます。
+        しかし、新たなアーキテクチャ実践はなかなか簡単ではありません。 　
+        そこで今回は、「データの偏在性」に関連し、改めてEdge Computingを取り上げます。
+        新たなアーキテクチャ実践は簡単ではないですが、今のままでは、5G等で
+        どんなにアクセス回線が速くなってもアプリケーションの品質は上がりません。
+        逼迫した問題として、議論を行いたいと思います。
       slides:
-        - file: placeholder.pdf
-    - title: 5G時代のネットワークセキュリティ戦略
-      time: 11:00-11:30
-      type: スポンサーセッション
+        - file: onic2020-kouno.pdf
+    - title: 潜水艦に乗ってトンネルをくぐろう！〜SubmarinerによるマルチKubernetesクラスターネットワーキング〜
+      time: "13:40"
+      type: 講演 D1_2
       tag: s_02
       presenters:
         - name_and_title: |-
-            インテリジェントネットワーク合同会社<br />
-            山本　健太郎
-          photo: placeholder-120x140.png
+            Red Hat / シニアコンサルタント<br />
+            織 学
+          photo: Awamori.jpg
       abstract: |-
-        このセッションでは、5Gネットワーク環境におけるセキュリ
-        ティの課題と戦略に焦点を当てます。新たなセキュリティリ
-        スクと5Gテクノロジーの特性に対処するためのアプローチや
-        ベストプラクティスについて討議し、ネットワークセキュリ
-        ティの強化に向けた戦略を検討します。
+        複数のKubernetesクラスター間のネットワーキングを制御する仕組みを提供する、
+        Submarinerというプロジェクトについてご紹介します。
       slides:
-        - file: 2022_Routing-Platform.pdf
-    - title: エッジコンピューティングとIoTの融合：ネットワークの未来
-      time: 11:30-12:00
-      type: 講演
+        - file: Submariner-ONIC2020-public-ja_ori.pdf
+    - title: クラウドから｢エッジ｣へ
+      time: "14:20"
+      type: スポンサーセッション D1_3
       tag: s_03
       presenters:
         - name_and_title: |-
-            クラウドソリューションズ株式会社<br />
-            鈴木　みずき 
-          photo: placeholder-120x140.png
+            NTTコミュニケーションズ 株式会社 イノベーションセンター/担当課長<br />
+            沈　文裕
+          photo: SHEN_web.jpg
       abstract: |-
-        このセッションでは、エッジコンピューティングとインター
-        ネット・オブ・シングス（IoT）がネットワークアーキテク
-        チャとビジネスモデルに与える影響に焦点を当てます。エッ
-        ジデバイスからのデータ処理とネットワーク要件への対応に
-        ついて議論し、これらの技術がネットワークの未来をどのよ
-        うに変えるかについて考察します。
-    - title: クラウドネイティブネットワークの実装と運用
-      time: 12:00-12:15
-      type: スポンサーセッション
+        コンピューティングリソースをネットワークの周縁部に配置することにより、
+        低遅延応答、分散処理、トラフィック最適化などを実現するテクノロジーとして、
+        大いに期待されているエッジコンピューティング。一方、商用導入に当たって、コストや、
+        性能、運用性など、多くの課題に直面しています。
+        本プログラムはエッジコンピューティング実現に向けたNTTコミュニケーションズでの取り組みをご紹介します。
+    - title: データプレーン高速化技術の最新アップデート
+      time: "15:00"
+      type: 講演 D1_4
       tag: s_04
       presenters:
         - name_and_title: |-
-            データマスター株式会社<br />
-            クラウドサービス開発部<br />
-            小林　悠子
-          photo: placeholder-120x140.png
-        - name_and_title: |-
-            データマスター株式会社<br />
-            クラウドサービス開発部<br />
-            佐藤　大輔
-          photo: placeholder-120x140.png
+            インテル株式会社<br />
+            アプリケーションエンジニア<br />
+            森 直之
+          photo: Mori.jpg
+      abstract: |-
+        このセッションでは汎用サーバーで利用できるデータプレーンの高速化技術のうち 
+        ソフトウェア実装であるDPDK(データプレーン開発キット)の最新情報と、 
+        Intel® Scalable I/O Virtualizationなどこれからやってくるハードウェア
+        実装の高速化技術に関する最新情報をお届けします。
       slides:
-        - file: placeholder.pdf
-    - title: お昼休憩
-    - title: 量子ネットワーキングの未来：安全性とスケーラビリティ
-      time: 13:30-14:00
-      type: 講演
+        - file: ONIC.2020.DPDK_.dist_.pdf
+    - title: NFVの商用化の開発と運用の経験から将来のネットワークアーキテクチャを考える
+      time: "15:40"
+      type: 講演 D1_5
       tag: s_05
       presenters:
         - name_and_title: |-
-            サイバーコアテック合同会社<br />
-            サイバーセキュリティチーム<br />
-            高橋　美咲
-          photo: placeholder-120x140.png
+            株式会社NTTドコモ<br />
+            ネットワーク開発部　仮想化基盤担当/担当課長<br />
+            中島 佳宏
       abstract: |-
-        このセッションでは、量子ネットワーキングの最新動向と
-        その未来に焦点を当てます。量子暗号技術と量子ネットワ
-        ークの可能性について議論し、これらの革新的なアプロー
-        チがネットワーク通信の安全性とスケーラビリティにどの
-        ような影響を及ぼすかについて考察します。
-    - title: サイバーセキュリティと人工知能：未知の脅威への対応
-      time: 14:00-14:30
-      type: スポンサーセッション
+        ドコモでは､2015年よりコアネットワーク機能の仮想化の商用開発を始め，
+        2016年にモバイル交換機 (EPC)の仮想化の商用サービスを開始しました．
+        以降仮想化の適応範囲を拡大し，2019年度末でLTE以降のコアネットワーク設備の40%以上が仮想化され，
+        今後も拡大する予定です．一方で近年のコンテナ技術への注目の高まりや，
+        テレコム業界におけるクラウドネイティブな通信アプリケーションへの導入についても活発に議論されております．
+        これまでのドコモでのNW仮想化の開発や運用経験を踏まえ，最近の技術動向を踏まえつつ，
+        通信事業者観点での将来のテレコムアプリケーションへの要件やこれらを具現化するための
+        ネットワークアーキテクチャについて検討を進めてきました．本発表でこれらの概要や取り組みを紹介します．
+      slides:
+        - file: ONIC-nakajima-docomo-ngna-r4.pdf
+    - title: Horizontal NFV の実践と課題
+      time: "16:20"
+      type: スポンサーセッション D1_6
       tag: s_06
       presenters:
         - name_and_title: |-
-            テクノロジーフロンティア株式会社<br />
-            中村　一郎 
-          photo: placeholder-120x140.png
+            シスコシステムズ合同会社<br />
+            BUSINESS SOLUTIONS ARCHITECT.<br />
+            文字 勇
+          photo: monji_photo.jpg
       abstract: |-
-        このセッションでは、人工知能と機械学習がサイバーセキュ
-        リティ分野で果たす役割に焦点を当てます。未知の脅威や高
-        度な攻撃への対策としてAI技術の活用について議論し、セキ
-        ュリティの向上とインシデント対応の最新アプローチを探り
-        ます。
-    - title: グローバルなデジタルインフラ：ネットワークの普及と課題
-      time: 14:30-15:00
-      type: 講演
+        NFVの商用サービス適用が広がる中、特に大規模なNFVでは、
+        VNFとNFVI基盤が垂直統合型で提供される事例も少なくありません。
+        共通のNFVI基盤の上に各社異なるVNFを実装するHorizontal NFVは、
+        商用サービスでの実現には課題も見られます。本セッションではVirtualMachine/VNFにおける
+        Horizontal NFVの実現例をもとに、あらためてその課題を考察し、
+        今後拡大が見込まれるコンテナ環境に向けても役立てるべく考察を広げてまいります。
+      slides:
+        - file: onic2020-cisco-nfv.pdf
+    - title: A SDN FullStack for IXP with P4/OpenFlow
+      time: "17:00"
+      type: 講演 D1_7
       tag: s_07
       presenters:
         - name_and_title: |-
-            ビジョンテックジャパン有限会社</br />
-            町田　真理子
-          photo: placeholder-120x140.png
+            Dr.Marc Bruyere senior researcher at IIJ II
+          photo: MarcBruyere.jpg
         - name_and_title: |-
-            ビジョンテックジャパン有限会社</br />
-            渡辺　雅彦
-          photo: placeholder-120x140.png
+            Chris Visser research engineer at IIJ II<br />
+          photo: chris.jpg
       abstract: |-
-        このセッションでは、世界中のデジタルインフラストラクチャ
-        の普及と課題に焦点を当てます。新興市場と発展途中国におけ
-        るデジタルインクルージョンの促進、インフラストラクチャの
-        持続可能性、そして地域ごとのネットワーク課題について討議
-        し、国際的な協力の必要性について考えます。
-      slides:
-        - file: 2022_Service-Mesh.pdf
-        - file: 2022_Service-Mesh2.pdf
-    - title: 休憩
-      time: 15:00-15:10
-    - title: 量子コンピューティングとネットワーク：新たな可能性への突破口
-      time: 15:10-15:40
-      type: 講演
+        Moving the complexity in the upper management layers with automation has been recognized 
+        as the most suitable solution to reduce operational complexity without mitigating scalability.
+        IXP-Manager open-source project initiated by INEX brings all at once a provisioning and 
+        automation full stack management system for day-to-day operations. Still, it does not include 
+        the switching fabric control and design. Our contribution here is to add this missing 
+        functionality getting the full advantage of the OpenFlow/P4 Umbrella architecture, which 
+        already simplified the data-plane and control-plane with its proactive network states approach.
+        We think diagramming needs to be in the center of the design process as a one-stop solution. 
+        Furthermore, all diagrammed designs are tested in an emulated module called push-on-green to 
+        evaluate the redundancy mechanisms and layer2/layer3 reachability before deploying in production.
+        In the end, our presentations aim to introduce a basic Intent-Based Networking solution for 
+        IXP operators of any size.
+        
+        英語での講演になります。通訳は入りません。
+    - title: いまさら聞けないWiFi6
+      time: "17:40"
+      type: 講演 D1_8
       tag: s_08
       presenters:
         - name_and_title: |-
-            デジタルファクトリー合同会社<br />
-            加藤　麗子
-          photo: placeholder-120x140.png
+            日本ヒューレットパッカード株式会社<br />
+            Aruba事業統括本部 第一技術部 部長<br />
+            池田 豊
+          photo: ikeda.jpg
       abstract: |-
-        このセッションでは、量子コンピューティングがネットワーク
-        分野にもたらす可能性に焦点を当てます。量子アルゴリズムと
-        ネットワーク最適化の関連性について議論し、量子コンピュー
-        ティングがネットワーク設計とセキュリティに与える影響につ
-        いて検証します。
-    - title: スマートシティの未来：ネットワーク技術と都市インフラ
-      time: 15:40-16:10
-      type: スポンサーセッション
+        次世代無線LANシステムとしてWiFi6を採用されている企業が増えています。これからWiFi6を検討する企業にとって、
+        WiFi6とは何か？これまでの無線LAN規格と何が変わったのか？
+        5Gやローカル5Gとの違いや想定されるユースケースを中心に、企業が無線LANインフラをWiFi6化するベネフィットをご紹介します。
+      slides:
+        - file: HLP_ikeda.pdf
+    - title: ローカル5Gの取組について
+      time: "18:20"
+      type: 講演 D1_9
       tag: s_09
       presenters:
         - name_and_title: |-
-            プログレッシブシステムズ株式会社<br />
-            伊藤　剛太
-          photo: placeholder-120x140.png
+            NTTコミュニケーションズ株式会社<br />
+            イノベーションセンター<br />
+            田中 宏茂
+          photo: tanaka_hiroshige.jpg
       abstract: |-
-        このセッションでは、スマートシティ概念とネットワーク技
-        術の相互作用に焦点を当てます。都市インフラストラクチャ
-        のデジタル化、IoTセンサーの展開、および市民サービスの改
-        善におけるネットワークの役割について討議し、持続可能な
-        都市の実現に向けた戦略を考察します。
-      slides:
-        - file: placeholder.pdf
-    - title: ハイパフォーマンスネットワーク設計の最新トレンド
-      time: 16:10-16:40
-      type: 講演
+        ５G通信技術をプライベートネットワークで用いる「ローカル5G」。デジタルトランスフォーメーションを実現する技術として期待が高まっています。
+        とりわけ「超高速」「超低遅延」「多数同時接続」という特徴的なトラヒックを制御する機構が重要となっています。本プログラムでは、
+        これらトラヒックを制御するネットワーキングに着目してローカル5Gの取組についてご紹介します。
+    - title: 終了
+      time: "19:00"
+- date: -DAY2- October 16, 2020
+  sessions:
+    - title: Interop Tokyo ShowNet における SDN のあゆみ
+      time: 10:00-11:30
+      type: パネルセッション D2_1
       tag: s_10
       presenters:
         - name_and_title: |-
-            インフィニティインフォテック株式会社<br />
-            林　梨香
-          photo: placeholder-120x140.png
+            情報通信研究機構 サイバーセキュリティ研究所<br />
+            サイバーセキュリティ研究室 / 主任研究技術員<br />
+            遠峰 隆史
+          photo: takashi_tomine.jpg
+        - name_and_title: |-
+            日本電気株式会社/マネージャ<br />
+            齋藤 修一
+          photo: Shuichi_Saito.jpg
+        - name_and_title: |-
+            東京大学 情報基盤センター / 助教<br />
+            中村 遼
+          photo: ryo-nakamura.jpg
+        - name_and_title: |-
+            NTTコミュニケーションズ株式会社<br />
+            上野 幸杜
+          photo: Yukito_Ueno.jpg
       abstract: |-
-        このセッションでは、ハイパフォーマンスネットワーク設計の
-        最新トレンドに焦点を当てます。高速データ伝送、低遅延通信、
-        および高信頼性ネットワークの設計戦略について議論し、次世
-        代のネットワークインフラストラクチャに向けた革新的なアイ
-        デアを探ります。
+        ShowNet は、例年6月に開催されるインターネットテクノロジーイベント 
+        Interop Tokyo において構築される世界最大のライブデモンストレーションネットワークです。
+        ShowNet では以前より積極的に SDN 技術を取り入れてきました。同時に、私たちはさまざまな形で 
+        SDN 時代のネットワーク機能を実装してきました。
+        2020年は残念ながら Interop Tokyo は開催されませんでしたが、今回は今までの取り組みを振り返ることで、
+        ShowNet でその年ごとに考えるネットワークのかたちと SDN の利用について、苦労話を交えながらご紹介します。
       slides:
-        - file: 2022_AETHER-Open-5G-Connected-Edge-Cloud.pdf
-    - title: 休憩（コーヒータイム）
-      time: 16:40-17:10
-    - title: サイバーレジリエンス：攻撃からの復旧とネットワーク保護
-      time: 17:10-17:40
-      type: 講演
+        - file: onic-japan-2020-ShowNet_part1.pdf
+        - file: onic-japan-2020-ShowNet_part2.pdf
+        - file: onic-japan-2020-ShowNet_part3.pdf
+    - title: 5G コンテナ基盤の事例紹介
+      time: "13:00"
+      type: 講演 D2_2
       tag: s_11
       presenters:
         - name_and_title: |-
-            クラウドウェイブテクノロジー合同会社<br />
-            大野　宏治
-          photo: placeholder-120x140.png
+            楽天モバイル株式会社<br />
+            壬生 亮太
       abstract: |-
-        このセッションでは、サイバー攻撃からの迅速な復旧とネット
-        ワークの保護に焦点を当てます。サイバーレジリエンスの実装
-        戦略やインシデント対応プランについて討議し、ビジネス継続
-        性の確保とネットワークセキュリティの向上に関する最新の情
-        報を提供します。
+        
       slides:
-        - file: 2022_-AWS_Azure.pdf
-    - title: ネットワークデータの分析とビッグデータ戦略
-      time: 17:40-18:10
-      type: 講演
+        - file: ONIC-mibu-20201016.rev3_.pdf
+    - title: プロトコルの標準化について
+      time: "13:40"
+      type: 講演 D2_3
       tag: s_12
       presenters:
         - name_and_title: |-
-            イノベーションドライブ株式会社<br />
-            松田　真理
-          photo: placeholder-120x140.png
+            ISOC-JP –<br />
+            ISPCチェア<br />
+            後藤 ひろゆき
       abstract: |-
-        このセッションでは、ネットワークデータの収集と分析に焦点
-        を当てます。ビッグデータテクノロジーの導入によるネットワー
-        クの最適化、トラブルシューティング、およびビジネスインテ
-        リジェンスへの応用について議論し、データ駆動型のネットワー
-        ク管理戦略を探求します。
-      slides:
-        - file: 2022_Network-as-Code.pdf
-    - title: ネットワークのエネルギー効率化と持続可能性
-      time: 18:10-18:40
-      type: 講演
+        IETFに実際に参加している立場から、IETF及びインターネットプロトコルがどのように標準化されているかを紹介する。
+        その他、現在議論が行っているホットトピックや、仕様の読み方などについて触れます。
+    - title: 急速に進化を続けるCNIプラグイン「Antrea」
+      time: "14:20"
+      type: スポンサーセッション D2_4
       tag: s_13
       presenters:
         - name_and_title: |-
-            テックトランスフォームジャパン有限会社<br />
-            佐々木　俊一
-          photo: placeholder-120x140.png
+            ヴイエムウェア株式会社<br />
+            進藤 資訓
       abstract: |-
-        このセッションでは、ネットワークインフラストラクチャのエ
-        ネルギー消費と持続可能性に焦点を当てます。省エネルギーネッ
-        トワーク設計、再生可能エネルギーの活用、および環境に配慮
-        したネットワーク運用について討議し、エネルギー効率の向上
-        と環境への配慮に関する戦略を検討します。
+        AntreaはKubernetes環境に対してネットワーク機能を提供するCNI (Container Network Internface)プラグイン実装の一つで、
+        現在急速に開発が進行、進化を続けています。データプレーンにOpen vSwitchを使っているのが特徴で、ネットワークの接続性だけではなく、
+        豊富なセキュリティ機能、モニタリング機能を提供しています。AntreaはLinuxだけではなくWindows環境でも動作し、
+        幅広い環境（オンプレ、クラウド、ベアメタル、など）をサポートしています。
+        本セッションでは、Antreaのアーキテクチャ、特徴、動作についてデモを交えながら解説をするとともに、今後のロードマップについて紹介をします。
       slides:
-        - file: 2022_Introduction-to-Cilium-from-Telco-and-On-premise-Perspective.pdf
-    - title: デジタルツインズとネットワークの未来
-      time: 18:40-19:10
-      type: 講演
-      tag: s_14
+        - file: ONIC-2020-Antrea-DL.pdf
+    - title: ５Gへの期待とインターネットエンジニアの戸惑い
+      time: "15:00"
+      type: 講演 D2_5
+      tag: s_014
       presenters:
         - name_and_title: |-
-            デジタルビジョンテクノロジーズ合同会社<br />
-            高田　幸子
-          photo: placeholder-120x140.png
+            慶應義塾大学<br />
+            中村 修
       abstract: |-
-        このセッションでは、デジタルツインズ技術とネットワーク
-        の相互関係に焦点を当てます。デジタルツインズがネットワー
-        クデザイン、監視、および最適化にどのように活用できるか
-        について議論し、デジタルツインズがネットワーク管理にも
-        たらす可能性について検証します。
+        
       slides:
-        - file: placeholder.pdf
-    - title: 閉会宣言
-      time: 19:10-
+        - file: ONIC2020Fall-osamu.pdf
+    - title: モバイルネットワーク機能のソフトウェア化、オープン化の取り組み
+      time: "15:40"
+      type: 講演 D2_6
+      tag: s_015
       presenters:
         - name_and_title: |-
-            ONIC実行委員会<br />
+            富士通株式会社　<br />
+            共通技術開発統括部　ソフトウェア化技術開発室/室長<br />
+            秋山 裕子
+          photo: fj_akiyama.jpg
+      abstract: |-
+        モバイルネットワーク機能のソフトウェア化の意義や、富士通のOAI(OpenAirInterface)の取り組みを 
+        ご紹介するとともに、OAIコミュニティの5Gの取り組みやロードマップの共有をいたします。
+      slides:
+        - file: ONIC2020_Akiyama.pdf
+    - title: 	終了
+      time: "16:20"
