fix_sponsor_logos

--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -12,7 +12,7 @@
       logo: NTTCom.png
     - name: 富士通株式会社
       profile: http://www.fujitsu.com/jp/
-      logo: fujitsu.png
+      logo: fujitsu.jpg
     - name: シスコシステムズ合同会社
       profile: https://www.cisco.com/c/ja_jp/index.html
-      logo: Cisco.png
+      logo: Cisco.jpg
