typo about NTT Com fixed.

--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -7,7 +7,7 @@
     - name: TIS/あくしゅ
       profile: https://www.tis.co.jp/
       logo: tis.png
-    - name: エヌ・ティ。ティ・コミュニケーションズ株式会社
+    - name: エヌ・ティ・ティ・コミュニケーションズ株式会社
       profile: https://www.ntt.com/index.html
       logo: NTTCom.png
     - name: 富士通株式会社
