--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ tagline: ONIC Japan
 email: onicjapan@e-side.co.jp
 description: >
   本サイトはOpen NetworkIng Conference Japanのホームページです。
-baseurl: "/archives/2019/"
+baseurl: "/archives/2019"
 #baseurl: ""
 url: "https://onic.jp"
 permalink: pretty
