revised the jpeg file name of Cisco
Signed-off-by: Yoshihiko Kanaumi <yoshihiko.kanaumi@gmail.com>

--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -6,7 +6,7 @@
       logo: nokia.jpg
     - name: シスコシステムズ合同会社
       profile: https://www.cisco.com/
-      logo: cisco.jpg
+      logo: Cisco.jpg
     - name: NTTコミュニケーションズ株式会社
       profile: https://www.ntt.com/
       logo: nttcom.jpg
