--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -1,258 +1,222 @@
-- date: October 29, 2022
+- date: プログラム(1日目)
   sessions:
-    - title: 受付開始
-      time: 10:00-
-    - title: 開会宣言
-      time: 10:20-10:30
+    - title: 会場諸注意
+      time: "9:55"
+    - title: 開会の挨拶
+      time: "10:00"
       presenters:
         - name_and_title: |-
-            ONIC実行委員会委員長
-    - title: フューチャープルーニング：ネットワークの進化とAIの役割
-      time: 10:30-11:00
-      type: 講演
-      tag: s_01
+            浅羽登志也<br />
+            SDN Japan 実行委員長
+    - title: "SDN, OpenFlow, & ONF: Looking Forward to 2013"
+      time: "10:05"
+      type: ご来賓挨拶
       presenters:
         - name_and_title: |-
-            デジタルウェイ・テクノロジーズ<br />
-            デジタルイノベーション部<br />
-            田中　麻衣子
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、未来のネットワークトレンドと、人工知
-        能（AI）がネットワーク管理、セキュリティ、および最適化に
-        果たす役割に焦点を当てます。AIによる自己適応型ネットワー
-        クの展望について議論し、ネットワークインフラストラクチャ
-        の新たな展開に関する洞察を提供します。
-        [https://google.com](https://google.com)
-      slides:
-        - file: placeholder.pdf
+           総務省<br />
+            情報通信国際戦略局<br />
+            技術政策課 研究推進室<br />
+            室長 松井俊弘様<br />
     - title: 5G時代のネットワークセキュリティ戦略
-      time: 11:00-11:30
-      type: スポンサーセッション
-      tag: s_02
+      time: "10:10"
+      type: ご来賓挨拶
       presenters:
         - name_and_title: |-
-            インテリジェントネットワーク合同会社<br />
-            山本　健太郎
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、5Gネットワーク環境におけるセキュリ
-        ティの課題と戦略に焦点を当てます。新たなセキュリティリ
-        スクと5Gテクノロジーの特性に対処するためのアプローチや
-        ベストプラクティスについて討議し、ネットワークセキュリ
-        ティの強化に向けた戦略を検討します。
+           経済産業省<br />
+           商務情報政策局<br />
+           情報処理振興課<br />
+           課長補佐 村上貴将様<br />
+    - title: "SDN, OpenFlow, & ONF: Looking Forward to 2013"
+      time: 10:15-10:45
+      type: 基調講演1
+      presenters:
+        - name_and_title: |-
+            Mr. Dan Pitt
+            Open Networking Foundation　Executive Director
       slides:
-        - file: 2022_Routing-Platform.pdf
-    - title: エッジコンピューティングとIoTの融合：ネットワークの未来
-      time: 11:30-12:00
-      type: 講演
-      tag: s_03
+        - file: Dan-Pitt.pdf
+    - title: OpenFlow/SDNに対する通信事業者としての期待
+      time: 10:45-11:15
+      type: 基調講演2
       presenters:
         - name_and_title: |-
-            クラウドソリューションズ株式会社<br />
-            鈴木　みずき 
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、エッジコンピューティングとインター
-        ネット・オブ・シングス（IoT）がネットワークアーキテク
-        チャとビジネスモデルに与える影響に焦点を当てます。エッ
-        ジデバイスからのデータ処理とネットワーク要件への対応に
-        ついて議論し、これらの技術がネットワークの未来をどのよ
-        うに変えるかについて考察します。
-    - title: クラウドネイティブネットワークの実装と運用
-      time: 12:00-12:15
-      type: スポンサーセッション
-      tag: s_04
-      presenters:
-        - name_and_title: |-
-            データマスター株式会社<br />
-            クラウドサービス開発部<br />
-            小林　悠子
-          photo: placeholder-120x140.png
-        - name_and_title: |-
-            データマスター株式会社<br />
-            クラウドサービス開発部<br />
-            佐藤　大輔
-          photo: placeholder-120x140.png
+            伊藤 幸夫様
+            NTTコミュニケーションズ株式会社　取締役
       slides:
-        - file: placeholder.pdf
-    - title: お昼休憩
-    - title: 量子ネットワーキングの未来：安全性とスケーラビリティ
-      time: 13:30-14:00
-      type: 講演
-      tag: s_05
-      presenters:
-        - name_and_title: |-
-            サイバーコアテック合同会社<br />
-            サイバーセキュリティチーム<br />
-            高橋　美咲
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、量子ネットワーキングの最新動向と
-        その未来に焦点を当てます。量子暗号技術と量子ネットワ
-        ークの可能性について議論し、これらの革新的なアプロー
-        チがネットワーク通信の安全性とスケーラビリティにどの
-        ような影響を及ぼすかについて考察します。
-    - title: サイバーセキュリティと人工知能：未知の脅威への対応
-      time: 14:00-14:30
-      type: スポンサーセッション
-      tag: s_06
-      presenters:
-        - name_and_title: |-
-            テクノロジーフロンティア株式会社<br />
-            中村　一郎 
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、人工知能と機械学習がサイバーセキュ
-        リティ分野で果たす役割に焦点を当てます。未知の脅威や高
-        度な攻撃への対策としてAI技術の活用について議論し、セキ
-        ュリティの向上とインシデント対応の最新アプローチを探り
-        ます。
-    - title: グローバルなデジタルインフラ：ネットワークの普及と課題
-      time: 14:30-15:00
-      type: 講演
-      tag: s_07
-      presenters:
-        - name_and_title: |-
-            ビジョンテックジャパン有限会社</br />
-            町田　真理子
-          photo: placeholder-120x140.png
-        - name_and_title: |-
-            ビジョンテックジャパン有限会社</br />
-            渡辺　雅彦
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、世界中のデジタルインフラストラクチャ
-        の普及と課題に焦点を当てます。新興市場と発展途中国におけ
-        るデジタルインクルージョンの促進、インフラストラクチャの
-        持続可能性、そして地域ごとのネットワーク課題について討議
-        し、国際的な協力の必要性について考えます。
-      slides:
-        - file: 2022_Service-Mesh.pdf
-        - file: 2022_Service-Mesh2.pdf
+        - file: yukio_ito.pdf
     - title: 休憩
-      time: 15:00-15:10
-    - title: 量子コンピューティングとネットワーク：新たな可能性への突破口
-      time: 15:10-15:40
-      type: 講演
-      tag: s_08
+    - title: テーマ：SDNビジネスの可能性
+      time: 11:25-13:00
+      type: パネルディスカッション
       presenters:
         - name_and_title: |-
-            デジタルファクトリー合同会社<br />
-            加藤　麗子
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、量子コンピューティングがネットワーク
-        分野にもたらす可能性に焦点を当てます。量子アルゴリズムと
-        ネットワーク最適化の関連性について議論し、量子コンピュー
-        ティングがネットワーク設計とセキュリティに与える影響につ
-        いて検証します。
-    - title: スマートシティの未来：ネットワーク技術と都市インフラ
-      time: 15:40-16:10
-      type: スポンサーセッション
-      tag: s_09
-      presenters:
+            (モデレーター)</br />
+            加藤隆哉 ミドクラ</br />
         - name_and_title: |-
-            プログレッシブシステムズ株式会社<br />
-            伊藤　剛太
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、スマートシティ概念とネットワーク技
-        術の相互作用に焦点を当てます。都市インフラストラクチャ
-        のデジタル化、IoTセンサーの展開、および市民サービスの改
-        善におけるネットワークの役割について討議し、持続可能な
-        都市の実現に向けた戦略を考察します。
+            浅羽登志也 ストラトスフィア</br />
+        - name_and_title: |-
+            加納敏行 日本電気</br />
+        - name_and_title: |-
+            佐藤陽一 NTTコミュニケーションズ</br />
+        - name_and_title: |-
+            坂田義和 日商エレクトロニクス</br />
       slides:
-        - file: placeholder.pdf
-    - title: ハイパフォーマンスネットワーク設計の最新トレンド
-      time: 16:10-16:40
-      type: 講演
-      tag: s_10
+        - file: kato.pdf
+        - file: asaba.pdf
+        - file: kanoh.pdf
+        - file: sato.pdf
+        - file: sakata.pdf
+    - title: 休憩
+      time: 13:00-14:15
+    - title: テーマ：買い手からみたSDNへの期待と課題
+      time: 14:00-14:30
+      type: パネルディスカッション
       presenters:
         - name_and_title: |-
-            インフィニティインフォテック株式会社<br />
-            林　梨香
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、ハイパフォーマンスネットワーク設計の
-        最新トレンドに焦点を当てます。高速データ伝送、低遅延通信、
-        および高信頼性ネットワークの設計戦略について議論し、次世
-        代のネットワークインフラストラクチャに向けた革新的なアイ
-        デアを探ります。
+            (モデレーター)</br />
+            土屋太二 NECビッグローブ(パネリスト)</br />
+        - name_and_title: |-
+            井上 一清 IDCフロンティア</br />
+        - name_and_title: |-
+            大久保修一 さくらインターネット</br />
+        - name_and_title: |-      
+            伊勢 幸一 データホテル</br />
+        - name_and_title: |-
+            岩崎 磨 楽天</br />
       slides:
-        - file: 2022_AETHER-Open-5G-Connected-Edge-Cloud.pdf
-    - title: 休憩（コーヒータイム）
-      time: 16:40-17:10
-    - title: サイバーレジリエンス：攻撃からの復旧とネットワーク保護
-      time: 17:10-17:40
+        - file: tsuchiya2.pdf
+        - file: inoue.pdf
+        - file: ohkubo.pdf
+        - file: ise.pdf
+        - file: iwasaki.pdf      
+    - title: 休憩
+      time: 15:45-16:15
+    - title: API型SDNの例とテクニカルサービスからみたユースケース
+      time: 16:15-16:45
       type: 講演
-      tag: s_11
       presenters:
         - name_and_title: |-
-            クラウドウェイブテクノロジー合同会社<br />
-            大野　宏治
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、サイバー攻撃からの迅速な復旧とネット
-        ワークの保護に焦点を当てます。サイバーレジリエンスの実装
-        戦略やインシデント対応プランについて討議し、ビジネス継続
-        性の確保とネットワークセキュリティの向上に関する最新の情
-        報を提供します。
+            緒勝徹<br />
+            シスコシステムズ
       slides:
-        - file: 2022_-AWS_Azure.pdf
-    - title: ネットワークデータの分析とビッグデータ戦略
-      time: 17:40-18:10
+        - file: API_SDN_2012dec_okatsu.pdf
+    - title: API型SDNの例とテクニカルサービスからみたユースケース
+      time: 6:45-17:15
       type: 講演
-      tag: s_12
       presenters:
         - name_and_title: |-
-            イノベーションドライブ株式会社<br />
-            松田　真理
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、ネットワークデータの収集と分析に焦点
-        を当てます。ビッグデータテクノロジーの導入によるネットワー
-        クの最適化、トラブルシューティング、およびビジネスインテ
-        リジェンスへの応用について議論し、データ駆動型のネットワー
-        ク管理戦略を探求します。
+            中村真也／藤本幸一郎</br />
+            日本電気
       slides:
-        - file: 2022_Network-as-Code.pdf
-    - title: ネットワークのエネルギー効率化と持続可能性
-      time: 18:10-18:40
+        - file: fujimoto.pdf
+- date: プログラム(2日目)
+  sessions:
+    - title: 会場諸注意
+      time: "9:25"
+    - title: Managed SDNを目指して JGN-Xの挑戦
+      time: 9:30-10:00
+      type: 基調講演1
+      presenters:
+        - name_and_title: |-
+            下條真司様<br />
+            NICT<br />
+            テストベッド研究開発推進センター センター長<br />
+      slides:
+        - file: shimojo.pdf
+    - title: サービス開発はソフトウェア開発の挫折と革新から何を学べるか
+      time: 10:00-10:30
+      type: 基調講演2
+      presenters:
+        - name_and_title: |-
+            林雄基様<br />
+            奈良先端科学技術大学院大学<br />
+            情報科学研究科 准教授 
+      slides:
+        - file: kadobayashi_sdnjapan-dec12.pdf
+    - title: 休憩
+      time: 10:30-10:40
+    - title: テーマ：技術者から見たSDNとその実現技術
+      time: 10:40-12:40
+      type: パネルディスカッション
+      presenters:
+        - name_and_title: |-
+            (モデレーター)<br />
+            三木泉 アイティメディア<br />
+             (パネリスト)<br />
+            石黒邦宏 ストラトスフィア<br />
+            進藤資訓 ヴイエムウェア<br />
+            小宮崇博 ブロケード<br />
+            浅間正和 銀座堂<br />
+            河合栄治 NICT<br />
+            河野美也 Cisco<br />
+            ダン・ミハイ・ドミトリウ(通訳：田村芳明) ミドクラ<br />     
+      slides:
+        - file: MK_BGP_SDN-Japan2012.pdf
+        - file: ishiguro.pdf
+        - file: shindo.pdf
+        - file: komiya.pdf
+        - file: vyatta_sdn.pdf
+        - file: SDN-Japan-kawai.pdf
+        - file: Dan_midokura.pdf
+    - title: 休憩
+      time: 12:40-13:40
+    - title: OpenFlow技術を用いた消費電力削減のためのフロー最適化手法の一提
+      time: 13:40-14:10
       type: 講演
-      tag: s_13
       presenters:
         - name_and_title: |-
-            テックトランスフォームジャパン有限会社<br />
-            佐々木　俊一
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、ネットワークインフラストラクチャのエ
-        ネルギー消費と持続可能性に焦点を当てます。省エネルギーネッ
-        トワーク設計、再生可能エネルギーの活用、および環境に配慮
-        したネットワーク運用について討議し、エネルギー効率の向上
-        と環境への配慮に関する戦略を検討します。
+            津田徹<br />
+            奈良先端科学技術大学情報科学研究科
       slides:
-        - file: 2022_Introduction-to-Cilium-from-Telco-and-On-premise-Perspective.pdf
-    - title: デジタルツインズとネットワークの未来
-      time: 18:40-19:10
+        - file: tsuda-SDNJ_2012_final.pdf
+    - title: FPGAを使ってOpen vSwitchのデータプレーンを作る
+      time: 14:10-14:40
       type: 講演
-      tag: s_14
       presenters:
         - name_and_title: |-
-            デジタルビジョンテクノロジーズ合同会社<br />
-            高田　幸子
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、デジタルツインズ技術とネットワーク
-        の相互関係に焦点を当てます。デジタルツインズがネットワー
-        クデザイン、監視、および最適化にどのように活用できるか
-        について議論し、デジタルツインズがネットワーク管理にも
-        たらす可能性について検証します。
+            空閑洋平<br />
+            慶應義塾大学
       slides:
-        - file: placeholder.pdf
-    - title: 閉会宣言
-      time: 19:10-
+        - file: kuga-ovs-fpga.pdf
+    - title: QN-GENの拡張機能開発における形式手法の適用事例
+      time: 14:40-15:10
+      type: 講演
       presenters:
         - name_and_title: |-
-            ONIC実行委員会<br />
+            三善浩司<br />
+            九州大学大学院システム情報科学府
+      slides:
+        - file: 5th-PBL-QNET-SDNJapan(20121207)-presentation.pdf
+    - title: 休憩
+      time: 15:10-15:20
+    - title: SDNがもたらすベネフィットを考える
+      time: 15:20-15:50
+      type: 講演
+      presenters:
+        - name_and_title: |-
+            福田一郎<br />
+            NTT-MCL
+      slides:
+        - file: fukuda.pdf
+    - title: SDNの実運用を前提にした場合の運用管理技術の課題
+      time: 15:50-16:20
+      type: 講演
+      presenters:
+        - name_and_title: |-
+            林 經正<br />
+            ボスコ・テクノロジーズ
+      slides:
+        - file: hayashi.pdf
+    - title: 休憩
+      time: 16:20-16:30
+    - title: OpenFlowを用いたファブリック製品の実装例とクラウドマネージャの連携について
+      time: 16:30-17:00
+      type: 講演
+      presenters:
+        - name_and_title: |-
+            宮永直樹<br />
+            日本電気
+      slides:
+        - file: miyanaga.pdf
+    - title: クロージング
+      time: 17:00ー
