--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -1,15 +1,60 @@
-- tier_name: 協賛企業
+- tier_name: プラチナスポンサー
   size: large
   sponsors:
-    - name: サイバーファーストコネクト株式会社
-      profile: https://www.example.com/
-      logo: placeholder-500x130.png
-    - name: 株式会社デジタルウェイワイヤレス
-      profile: https://www.example.com/
-      logo: placeholder-500x130.png
-    - name: ネクストジェネレーションネットワークス合同会社
-      profile: https://www.example.com/
-      logo: placeholder-500x130.png
-    - name: クラウドソリッドコネクト株式会社
-      profile: https://www.example.com/
-      logo: placeholder-500x130.png
+    - name: ミドクラジャパン株式会社
+      profile: http://www.midokura.jp/
+      logo: midokura.jpg
+    - name: 株式会社ストラトスフィア
+      profile: http://www.stratosphere.co.jp/
+      logo: Stratosphere.jpg
+    - name: NTTコミュニケーションズ株式会社
+      profile: https://www.ntt.com/
+      logo: NTT_com.jpg
+    - name: 株式会社日立製作所
+      profile: https://www.hitachi.co.jp/
+      logo: Hitachi.jpg
+    - name: 株式会社エヌ・ティ・ティ・データ
+      profile: https://www.nttdata.com/jp/ja/
+      logo: Ntt_Data.jpg
+    - name: ジュニパーネットワークス株式会社
+      profile: https://www.juniper.net/jp/ja.html
+      logo: Juniper.jpg
+    - name: 日商エレクトロニクス株式会社
+      profile: https://www.nissho-ele.co.jp/
+      logo: Nissho.jpg
+    - name: アリスタネットワークスジャパン合同会社
+      profile: https://www.arista.com/jp/
+      logo: arista.jpg
+    - name: ブロケード コミュニケーションズ システムズ株式会社
+      profile: http://www.brocadejapan.com/
+      logo: BROCADE.jpg
+    - name: 日本電気株式会社
+      profile: https://jpn.nec.com/
+      logo: nec.png
+    - name: A10ネットワークス株式会社
+      profile: https://www.a10networks.co.jp/
+      logo: a10-new.jpg
+    - name: エヌ・ティ・ティ・コムウェア株式会社
+      profile: https://www.nttcom.co.jp/
+      logo: Ntt-comware.jpg
+    - name: 日本アイ・ビー・エム株式会社
+      profile: https://www.ibm.com/jp-ja
+      logo: ibm-new.jpg      
+- tier_name: ゴールドポンサー
+  size: middle
+  sponsors:
+    - name: 伊藤忠テクノソリューションズ株式会社
+      profile: https://www.ctc-g.co.jp/
+      logo: CTC.jpg
+    - name: イクシアコミュニケーションズ株式会社
+      profile: https://www.keysight.com/us/en/cmp/2020/network-visibility-network-test.html
+      logo: ixia_logo.jpg
+- tier_name: 後援
+  size: middle
+  sponsors:
+    - name: 総務省
+      profile: https://www.soumu.go.jp/
+      logo: img0.gif
+    - name: 経済産業省
+      profile: https://www.meti.go.jp/
+      logo: img0.gif
