--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -40,7 +40,7 @@
     - name: 日本アイ・ビー・エム株式会社
       profile: https://www.ibm.com/jp-ja
       logo: ibm-new.jpg      
-- tier_name: ゴールドポンサー
+- tier_name: ゴールドスポンサー
   size: middle
   sponsors:
     - name: 伊藤忠テクノソリューションズ株式会社
