redundant panelist text removed.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -76,7 +76,7 @@
       presenters:
         - name_and_title: |-
             (モデレーター)<br />
-            土屋太二 NECビッグローブ(パネリスト)<br />
+            土屋太二 NECビッグローブ<br />
         - name_and_title: |-
             (パネリスト)<br />        
             井上 一清 IDCフロンティア
