--- a/_data/onic_exhibition.yml
+++ b/_data/onic_exhibition.yml
@@ -1,36 +1,308 @@
 venue:
   title: 展示概要
-  map: placeholder-500x500.png
+  map: booth.jpg
 exhibitors:
-  - name: サイバーファーストコネクト株式会社
-    profile: https://www.example.com/
-    logo: placeholder-200x100.png
+  - name: 日商エレクトロニクス株式会社
+    profile: https://www.nissho-ele.co.jp/
+    logo: Nissho.jpg
     booth: 1
     abstract: |-
-      最新のネットワーク機器やサーバーテクノロジーを展示。高性能な
-      ルーターやスイッチ、クラウドベースのサービスを含む製品ライン
-      ナップを紹介し、来場者にネットワークインフラの強化や拡張の可
-      能性を提示。
-  - name: 株式会社デジタルウェイワイヤレス
-    profile: https://www.example.com/
-    logo: placeholder-200x100.png
+      『ネットワーク』から『ネットワーキング』へ。<br />
+      今回のSDN/NaaSデモでは、オープンソースのSDNコントローラーから、
+      Pica8/Brocae製SDNスイッチ（SDN-GW）を自動制御します。これにより、
+      他通信のバースティングの影響 やロケーションなどに関係無く、特定顧客
+      へユーザーエクスペリエンスの向上を実現する オン・デマンド映像配信サ
+      ービスをご覧いただけます。日商エレクトロニクスは、SDN/NaaSのコンサ
+      ルティング力・インテグレーション力を通じ、 世界中のICTを、場所に依存
+      する事なく、安全に、快適に利用できるサービス基盤を社会 に提供して参ります。
+  - name: シスコシステムズ合同会社
+    profile: https://www.cisco.com/site/jp/ja/index.html
+    logo: ciscosystems.jpg
     booth: 2
     abstract: |-
-      最新のセキュリティテクノロジやソフトウェアの実演を行う。脅威
-      のリアルタイムな分析や侵入検知システムのデモを通じて、来場者
-      にセキュリティ対策の必要性を認識させる。
-  - name: ネクストジェネレーションネットワークス合同会社
-    profile: https://www.example.com/
-    logo: placeholder-200x100.png
+      ネットワークのプログラマビリティを実現することで、お客様のニーズに決め
+      細やかな対応を可能とする Cisco Open Network Environment(CiscoONE)
+      ソリューションを具体的なデモンストレーションと共に展示いたします。<br />
+      1. One Platform Kit（onePK）<br />
+      Cisco IOS®、IOS-XR、NX-OSで利用可能な開発者用のアプリケーション プログラミング インターフェイス（API）のデモとご紹介　（遅延、回線使用状況に応じたルーティングテーブル更新デモなど）<br />
+      2. クラウドオーケストレーション<br />
+      クラウド環境におけるサーバー、ストレージおよびネットワークの物理および論理リソース管理ツールのUCS Directorのデモとご紹介　（VXLAN含むOverlay環境にも対応）<br />
+      3. Cisco eXtensible Network Controller（XNC）<br />
+      OpenDaylightをベースに開発されているCiscoのSDNコントローラーのデモとご紹介<br />
+      4. Cisco ONE概要説明<br />
+      Cisco Open Network Environmentのコンセプトやロードマップをご紹介いたします。
+  - name: 株式会社日立製作所
+    profile: https://www.hitachi.co.jp/
+    logo: hitachi.jpg
     booth: 3
     abstract: |-
-      最新のサイバーセキュリティトピックに焦点を当て、来場者がセキュ
-      リティリスクを理解し、適切な対策を学べるようなプログラムを提供。
-  - name: クラウドソリッドコネクト株式会社
-    profile: https://www.example.com/
-    logo: placeholder-200x100.png
+      日立ブースでは、目的に応じた柔軟なネットワーク制御を可能にするSDN関連の
+      最新技術を展示します。<br />
+      １．ネットワーク仮想化を活用したシステム自動生成技術(参考出展)<br />
+      サーバ／ストレージ／ネットワークの３要素を仮想化することにより、システム
+      全体を仮想化基盤上で構成できるようになります。システム定義のテンプレート
+      に基づき、システムを迅速に自動構成します。マルチハイパーバイザ対応、
+      オープンスタック・クラウドスタック環境下でデモンストレーションを実施します。<br />
+      ２．クラウドおよびネットワークの高機能化技術<br />
+      ネットワークのみならずデータセンタ内のIT資源も考慮し、総合的に負荷配分
+      や資源配置を制御することで、通常はトレードオフとなる信頼性の要件と省電力
+      の要件を調和させたミッションクリティカルなクラウドを構成する各種技術を展示します。
+  - name: 株式会社ストラトスフィア
+    profile: http://www.stratosphere.co.jp/
+    logo: Stratosphere.jpg
     booth: 4
     abstract: |-
-      トラフィックの可視化やパフォーマンス分析に特化したツールのデモ
-      を行う。来場者はリアルタイムでネットワークの健全性やトラフィッ
-      クの傾向を把握し、問題の早期発見に役立つツールを知ることができる。
+      (株)ストラトスフィアでは、「Network as a Service (NaaS)」を
+      目指したネットワーク仮想化製品である「Stratosphere SDN Platform (SSP)」
+      を開発し提供しております。今回の展示ではSSPの特徴の1つであるNorthbound API
+      を用いてのネットワーク構築の過程をご覧頂くためのデモを行います。加えて、MPLS
+      への取り組みとして機器ベンダ製品との連携のデモを通して最新リリースのご紹介を致します。
+      企業向け SDN Solution である 「OmniSphere」 の開発も進めております。<br />
+      OmniSphere はオ フィス向け仮想ネットワークソリューションであり、端末ある
+      いはユーザをSDNで管理する仮 想ネットワークに結びつけるものです。これにより
+      「組織変更やレイアウト変更のたびに繰り 返されるネットワーク再設計と再構築」
+      という多くの IT 管理者が抱える問題を解決できます。最新リリースとタブレット
+      端末を用いてのデモをお見せ致します。
+  - name: A10ネットワークス株式会社
+    profile: https://www.a10networks.co.jp/
+    logo: A10.jpg
+    booth: 5
+    abstract: |-
+      A10ネットワークスのThunderは、従来のアプリケーションデリバリコントローラ
+      の枠を超え、先進的なアプリケーションを一つのプラットフォームで提供する、
+      ユニファイドアプリケーションサービスゲートウェイ（UASG）です。従来のADC
+      機能に加えて、セキュリティ機能やSDNソリューション等を含む次世代ネットワーク
+      機能を提供しています。<br />
+      展示内容<br />
+      ■ADC機能を提供するThunder/AXをSDN環境に統合し、負荷に応じて
+      ダイナミックにADCリソースをコントロールする「SDNスケールアウトソリューション」<br />
+      ■クラウド環境でADCリソースを含めた構築・運用の自動化を可能にするThunder/AXと
+      他社クラウドオーケストレーター製品との連携ソリューション
+  - name: Nuage Networks (日本アルカテル・ルーセント株式会社)
+    profile: https://www.nuagenetworks.net/
+    logo: alca.jpg
+    booth: 6
+    abstract: |-
+      アルカテル・ルーセントがシリコンバレーに設立した新規ベンチャーであり、SDN
+      ソリューションの開発を専門とするNuage Networksの Virtualized Services 
+      Platform (VSP) をプレゼンテーションセッション及びブースでのデモにてご紹介
+      いたします。 VSPは、クラウド・サービスプロバイダ、Webスケール事業者、企業
+      ユーザが堅牢で拡張性の高いネットワーク・インフラを構築することを可能にします。
+      VSPにより、安全で柔軟なコンピュート/ストレージ/ネットワーキング・リソースの
+      仮想化スライスを何千ものテナントやユーザグループに瞬時に提供できます。
+  - name: 日本電気株式会社
+    profile: https://jpn.nec.com/
+    logo: nec-2013.jpg
+    booth: 7
+    abstract: |-
+      NECはSDN事業強化の一環として、NEC独自の技術・製品・サービスや パートナーの
+      製品等を組み合わせ、企業/官公庁・通信事業者・データセンター 事業者向けの
+      ソリューションを「NEC SDN Solutions」の名称で体系化し、 提供しています。
+      今回展示する「NEC SDN Solutions」は、NECの先端技術によりITとネットワークを
+      融合させた安全・安心・高品質・堅牢なICTソリューションです。お客様のニーズに
+      シンプルかつ柔軟に対応し、新たなビジネス創出を支援します。
+  - name: 華為技術日本株式会社（ファーウェイ・ジャパン）
+    profile: https://www.huawei.com/jp/
+    logo: HW-2013.jpg
+    booth: 8
+    abstract: |-
+      ファーウェイは、SDN/NFV技術に基づく「SoftCOM」とその関連技術をご紹介
+      いたします。「SoftCOM」はSDN/NFV、クラウドなどの技術理念に基づいて
+      ファーウェイが構想したテクノロジで、キャリア・ネットワークにもたらし
+      うる利益と価値を最大限にします。<br />
+      ・プロトコル忘却型フォワーディング(Protocol Oblivious Forwarding 
+      [POF]):究極のフレキシビリティとプログラム性をSDNに提供。 POF技術に
+      よってユーザが定義したパケットがどのようにフォワーディングされるかを紹介。
+      <br />・SOX:Openflow1.0/1.2/1.3を同時にサポートする業界初のSDNコントローラ。
+      OF1.0/1.2/1.3ベースのOpenFlowスイッチが混在するネットワークをサポート。<br />
+      ・SN-640:ハイパフォーマンス(640Gbps)かつ低遅延（300ns）の小型（1U）SDN/OpenFlow
+      スイッチ。Openflow1.2/ 1.3をサポート。<br />・SDNテクノロジーデモ:SOXによる
+      OpenFlowスイッチのコントロール（デモ例:マルチパス、SDNコントローラ・ロード
+      バランシング、フロー制御、QoS等）クラウド環境におけるSOXのROAベースのノース
+      バウンドAPI(RESTful) IP/MPLSネットワークとのインターワーキング
+  - name: ヴイエムウェア株式会社
+    profile: https://www.vmware.com/jp.html
+    logo: VMW.jpg
+    booth: 9
+    abstract: |-
+      NSXは、VMwareが提供するネットワーク仮想化のためのソフトウェアで、多様な環境を
+      サポートします。ESXiはもちろんのこと、KVM、XenServerといったハイパーバイザを
+      サポートしOpenStack、CloudStack、vCloud Directorといった複数のクラウド
+      管理基盤ソフトウェアからシームレスに使う事ができます。また、エコパートナーとの
+      連携も積極的に推進しており、複数のネットワークベンダーとVXLANおよびOVSDBを
+      使った連携が可能です。今回、VMwareの展示ブースでは、STTとVXLANを混在させた
+      環境のデモやDC間連携のデモンストレーションなどを実施する予定です。
+  - name: FlowFowarding.org
+    profile: http://www.flowforwarding.org/
+    logo: FlowForwarding.jpg
+    booth: 10
+    abstract: |-
+      一般的に普及している安価でプログラム可能なハードウェアがあれば、ソフトウェア
+      との連携によって無限の可能性を広げることができます。"FlowForwarding"
+      コミュニティーはネットワークテクノロジーに関わる全てのお客様 に、Apache2
+      ライセンスの元に提供されるOpenFlowのオープンソースとそれに関するスタンダード
+      を利用してSDNの無限の可能性を理解していただきたいと考えています。この試みの
+      最初の製品は、OpenFlowバージョン1.2/1.3準拠でOF-Config1.1準拠の"LINC"
+      というスイッチになります。FlowForwardingブースでは、LINCスイッチを様々な
+      ハードウェアデバイスに搭載しOpenflowコントローラーを介してネットワークを
+      動的に制御するデモンストレーションを行います。
+  - name: Ciena Communications Japan Co., Ltd
+    profile: https://www.ciena.com/
+    logo: Ciena.jpg
+    booth: 11
+    abstract: |-
+      SDN Japan 2013のCiena社ブース(#11)にお立ち寄り下さい。Ciena社のO
+      PnアーキテクチャとSDNがどのようにして皆様のネットワークの斬新な変革を
+      お手伝いできるか自らの目でご確認下さい。<br />
+      これまでも世界最大級の通信事業者様にインテリジェントで柔軟な光パケット
+      ソリューションを提供してきたCiena社は、SDNを活用したサービス提供の
+      迅速化やネットワーク運用の効率化のための技術開発を他社に先駆けて推進
+      しています。Ciena社のOPnアーキテクチャは、高度なプログラマビリティ
+      を備えた新世代ネットワークを実現し、ネットワークのコスト低減、サービス
+      差別化をお手伝いします。事前に詳しい情報をお知りになりたい方は、以下
+      からホワイトペーパーをダウンロードいただけます。<br />
+      http://www.ciena.com/resources/white-papers/The-Power-of-Software-in-Cienas-OPn-Network-Architecture.html
+  - name: 三井情報株式会社
+    profile: https://www.mki.co.jp/
+    logo: mki.jpg
+    booth: 12
+    abstract: |-
+      昨年度以降注目を集めるSDN/OpenFlowは、今後多くの分野で普及・発展する
+      事が予測されています。とりわけ、大規模なクラウドサービスを展開する事業者
+      やデータセンター事業者からの期待が高いですが、SDN/OpenFlowの特性の一つ
+      である『制御系』つまり、集中管理や業務効率化はサービス事業者に関わらず、
+      企業や文教のネットワーク管理者にも非常に期待の高い性能といえます。<br />
+      現在、MKIでは、企業や文教におけるOpenFlowの利用について検討を始めています。<br />
+      企業や文教の管理者はネットワークを管理・運用する上で様々な問題を抱えています。
+      中でも"セキュリティの強化"は常に管理者を悩ます問題の一つです。あらゆる脅威から
+      ネットワークを安全に保つことは容易ではありません。また今日のユーザは様々な端末
+      をネットワークに接続することを望みます。多くのユーザ、多様化する端末。これらを
+      許容し、強固なセキュリティレベルを保つ為に、MKIではOpenFlowを使用した認証
+      システムの開発と研究を開始しました。 今回、SDN Japanではその概要と仕組みに
+      ついてご説明いたします。
+  - name: ネットワンシステムズ株式会社
+    profile: https://www.netone.co.jp/
+    logo: netone.jpg
+    booth: 13
+    abstract: |-
+      ネットワンシステムズ(株)ではSDNの市場動向や各製品紹介、評価結果のご紹介等
+      様々な取り組みを行い、コンサルから保守まで一貫してご提供できるよう取り組みを
+      実施しております。展示ではSDNの市場動向、弊社の取り組みについてのご紹介し、
+      デモも実施します。<br />
+      1.次世代クラウド オープンネットワーク仮想化デモ<br />
+      OpenStackとBigSwitch社のBVSをマルチベンダー環境(Arista, Brocade, 
+      SwithLight on Quanta, vArmour)環境で使用し、動的にネットワークが
+      作成されるデモを行います。<br />
+      2.統合モニタリングデモ<br />
+      BigSwitch社のBigTapを使用し、トラフィックを必要なときに必要な場所で
+      見える化 することを可能にします。APM(Application Performance 
+      Management)のような監視 装置と組み合わせることで、ネットワークの
+      状況確認やトラブルシュートが容易になります。
+  - name: NTTコミュニケーションズ株式会社
+    profile: https://www.ntt.com/index.html
+    logo: NTT_com.jpg
+    booth: 14
+    abstract: |-
+      NTTコミュニケーションズでは、SDNを商用サービス導入するなど、積極的に
+      導入している。今回は、一歩先の取組みとして、通信事業者の視点で見た
+      SDNデモンストレーションの展示を行う。
+  - name: NTTコムウェア株式会社
+    profile: https://www.nttcom.co.jp/
+    logo: NTT_cw.jpg
+    booth: 15
+    abstract: |-
+      ＮＴＴコムウェアでは、これまでのＮＴＴのネットワーク開発、構築、運用
+      の知見を活かしたＳＤＮコントローラの開発に取り組んでいます。市場への
+      導入が進んでいるデータ センター内のネットワークの仮想化や、ユーザ
+      企業内ＬＡＮへの適用を進めています。また、将来的に大規模なネットワーク
+      （通信事業者のコアネットワーク）へ適用可能なスケーラビリティを実現す
+      るため、機能分散／負荷分散／収容分散を可能なＳＤＮコントローラを検討
+      しています。展示ブースでは、トラヒック情報からサービス利用者の体感品質
+      を算出し、ＳＤＮの動的に通信経路を変更する仕組みと融合させ、最適な通信
+      経路を選択するデモンストレーションを行います。
+  - name: ブロケード コミュニケーションズ システムズ株式会社
+    profile: http://www.brocadejapan.com/
+    logo: brocade.jpg
+    booth: 16
+    abstract: |-
+      ブロケードが考えるSDNをギュっと凝縮してご紹介!≪ライブデモ実施≫<br />
+      --------------------------------------------------------------------<br />
+      物理ネットワークと仮想ネットワークを融合し、さらなる「自動化」へ。
+      ブロケードの展示コーナーでは、SDNのためのブロケードが考えるアーキテクチャを、
+      実際のデモと共に ご紹介します。<br />
+      データセンター・ネットワークNo.2のブロケードだから実現可能な現実的なSDNとは？
+      名刺と交換でロゴ入りノベルティを差し上げます。ぜひお立ち寄りください。<br />
+      ●≪マンガで理解≫知らないと損する仮想化とネットワークの関係<br />
+      ●≪ライブデモ≫「BrocadeVyatta」で作るハイブリッドクラウドのためのVPN接続<br />
+      ●≪新製品≫40GbE対応最新イーサネット・ファブリックスイッチ<br />「
+      BrocadeVDX6740/6740T」
+  - name: ミドクラジャパン株式会社
+    profile: https://www.midokura.com/
+    logo: midokura.jpg
+    booth: 17
+    abstract: |-
+      "MidoNet"は、"Intelligence at the Edge"というコンセプトで開発され、
+      分散型アーキテクチャを特徴とするオーバーレイ型ネットワーク仮想化プラット
+      フォームです。OpenStack、CloudStackと連携し、L2からL4までの拡張性が高く、
+      単一障害点を持たないネットワークサービスをします。<br />本展示では、8月に
+      新リリースされたMidoNet DiyariとRed Hat OpenStackのデモや、お客様や
+      パートナー様による検証事例の紹介を行います。
+  - name: 伊藤忠テクノソリューションズ株式会社
+    profile: https://www.ctc-g.co.jp/
+    logo: CTC.jpg
+    booth: 18
+    abstract: |-
+      伊藤忠テクノソリューションズ（株）では、弊社の強みであるマルチベンダー
+      ソリューションと、長年にわたって取り組んできた仮想化技術を用いて、
+      お客様のクラウド基盤の提案から設計・構築・保守までワンストップで提供可能です。<br />
+      展示ブースでは、情報通信システム事業グループが中心となりSDN/NFVへの
+      取り組みのご紹介と、それぞれのソリューションの一部を用いたデモを実施いたします。<br />
+      また、SDN関連製品などのカタログも各種ご用意いたしておりますので、是非ブース@18まで
+      お立ち寄りください。CTCでは、ソフトウェアによる効率的な管理を実現するITインフラ
+      ソリューションを、SDI(Software Defined Infrastructure)というコンセプトの
+      もとで推進しています。
+  - name: アリスタネットワークスジャパン合同会社
+    profile: https://www.arista.com/jp/
+    logo: arista.jpg
+    booth: 19
+    abstract: |-
+      ～SDN時代のデータセンターネットワークスイッチ～<br />
+      業界最高密度の10/40/100GbEポート11Uで最大1,152ポートの10G、288ポートの40G、
+      96ポートの100Gを収容可能な新製「Arista 7500E」をご紹介いたします。プログラミン
+      グ性に優れたArista Extensible Operating System(EOS)ソフトウェアを利用する
+      ことで、真のSoftware Defined Network(SDN)の構築するための自動化を実装するこ
+      とが可能です。
+  - name: サイアン・ジャパン合同会社
+    profile: http://www.cyaninc.com/
+    logo: cyan.jpg
+    booth: 20
+    abstract: |-
+      SDN Japan 2013 において、Cyan は、現実の世界でのSDN Use Caseにより、クラウド
+      とWAN のオーケストレーションをデモンストレーションします。<br />
+      データセンターネットワークとトランスポートインフラストラクチャとの統合は、ネット
+      ワークオペレータが、さらに自動化され経済的なクラウドサービスをエンタプライズカス
+      タマーにデリバリーしていくことを支援します。このデモンストレーションは、マルチベ
+      ンダー、マルチレイヤーで構築されたWAN のコネクティビティをプロビジョニングし、
+      ポイントクリックでのデータセンターリソースのインスタンシエイション、すなわち、
+      VM やクラウドサービス、また、オープンフローベースのデータセンターファブリック
+      のプロビジョニング等を実施します。
+  - name: 日本アイ・ビー・エム株式会社
+    profile: https://www.ibm.com/jp-ja
+    logo: ibm.jpg
+    booth: 21
+    abstract: |-
+      既存の物理ネットワークを変更することなく、迅速かつ柔軟に、ハイパースケールな
+      マルチテナントネットワークが構築可能な、SDNのオーバーレイモデル、DOVE
+      (Distributed Overlay Virtual Ethernet)テクノロジーと製品をご紹介します。<br />
+      なおこの製品のKVM対応版を、OpenDaylight Projectを介してOpen DOVEとして
+      オープンソース化する予定です。
+  - name: シトリックス・システムズ・ジャパン株式会社
+    profile: https://www.citrix.com/
+    logo: Citrix.jpg
+    booth: 22
+    abstract: |-
+      クラウドOS「CloudStack」とネットワークサービス基盤「NetScaler」を軸に
+      L2-L7まで統合的に管理可能なシトリックスのSDNソリューションを展示します。
+      L2-L3は、エコシステムベンダーとの連携により様々な仮想ネットワークを生成し、
+      L4-L7では、NetScalerにより、ロードバランス、SSLアクセラレーション、
+      アプリケーションファイアウォールなど様々なネットワークサービスを提供します。
