--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -11,7 +11,7 @@
       profile: http://www.midokura.jp/
       logo: midokura.jpg
     - name: 株式会社ストラトスフィア
-      profile: http://www.stratosphere.co.jp/%22
+      profile: http://www.stratosphere.co.jp/
       logo: Stratosphere.jpg
     - name: シスコシステムズ合同会社
       profile: http://www.cisco.com/web/JP/index.html
